--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -16,240 +16,52 @@
         android:layout_alignParentStart="true"
         android:weightSum="1">
 
-        <TableLayout
-            android:layout_width="match_parent"
+
+        <TextView
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/card0"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="0.27">
+            android:layout_weight="0.05"
+            android:text="Card 0" />
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Card 1"
+            android:id="@+id/card1"
+            android:layout_gravity="right"
+            android:layout_weight="0.05" />
 
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point40"
-                    android:layout_column="0" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point41"
-                    android:layout_column="1" />
-
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point42"
-                    android:layout_column="2" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point43"
-                    android:layout_column="3" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point44"
-                    android:layout_column="4" />
-            </TableRow>
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point30"
-                    android:layout_column="0" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point31"
-                    android:layout_column="1" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point32"
-                    android:layout_column="2" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point33"
-                    android:layout_column="3" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point34"
-                    android:layout_column="4" />
-            </TableRow>
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point20"
-                    android:layout_column="0" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point21"
-                    android:layout_column="1" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point22"
-                    android:layout_column="2" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point23"
-                    android:layout_column="3" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point24"
-                    android:layout_column="4" />
-            </TableRow>
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point10"
-                    android:layout_column="0" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point11"
-                    android:layout_column="1" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point12"
-                    android:layout_column="2" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point13"
-                    android:layout_column="3" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point14"
-                    android:layout_column="4" />
-            </TableRow>
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point00"
-                    android:layout_column="0" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point01"
-                    android:layout_column="1" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:background="@drawable/back"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point02"
-                    android:layout_column="2" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point03"
-                    android:layout_column="3" />
-
-                <TextView
-                    android:layout_width="@dimen/game_box_size"
-                    android:layout_height="@dimen/game_box_size"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="N"
-                    android:id="@+id/point04"
-                    android:layout_column="4" />
-            </TableRow>
-        </TableLayout>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Card 2"
+            android:id="@+id/card2"
+            android:layout_gravity="right"
+            android:layout_weight="0.05" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Roll Dice"
-            android:id="@+id/rollDiceButton"
+            android:id="@+id/dealButton"
+            android:text="DEAL"
             android:layout_weight="0.05" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/betButton"
+            android:text="BET"
+            android:layout_weight="0.05"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/passButton"
+            android:text="PASS"
+            android:layout_weight="0.05"
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
 </RelativeLayout>
