--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -48,6 +48,23 @@
             android:text="DEAL"
             android:layout_weight="0.05" />
 
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Current Bet : "
+            android:id="@+id/currentBetView"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.05" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/betView"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.05" />
+
         <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
